--- a/match-web/app/app.css
+++ b/match-web/app/app.css
@@ -29,3 +29,7 @@
   content: "";
   padding: 0;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
