--- a/match-web/app/app.css
+++ b/match-web/app/app.css
@@ -1,5 +1,14 @@
 /* app css stylesheet */
 
+@font-face {
+  font-family: 'A_Nefel_Botan';
+  src: url('fonts/A_Nefel_Botan.ttf');
+}
+
+body {
+  font-family: A_Nefel_Botan;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
