As Admin user I want to be able to delete applicant from the list page

--- a/match-web/app/app.css
+++ b/match-web/app/app.css
@@ -44,6 +44,10 @@ table > thead > tr {
     color: #ffffff;
 }
 
+table > tbody > tr > td {
+    vertical-align: middle !important;
+}
+
 .main-view{
   margin-bottom: 4em;
 }
